syntax = "proto3";

package pb;

option go_package = "github.com/PlegunovN/testTask/pkg/pb";

// Импорт файла с правилами валидации.
// Путь может отличаться в зависимости от того, как вы организуете зависимости.
import "validate/validate.proto";

service FileService {
    rpc UploadFile(UploadRequest) returns (UploadResponse);
    rpc DownloadFile(DownloadRequest) returns (DownloadResponse);
    rpc ListFiles(ListRequest) returns (ListResponse);
}

message UploadRequest {
    // Имя файла должно быть непустым
    string filename = 1 [(validate.rules).string = {min_len: 1, max_len: 1000}];
    // Данные файла не должны быть пустыми
    bytes data = 2 [(validate.rules).bytes = {min_bytes: 1}];
}

message UploadResponse {
    string message = 1;
}

message DownloadRequest {
    // Имя файла должно быть непустым
    string filename = 1 [(validate.rules).string = {min_len: 1, max_len: 1000}];
}

message DownloadResponse {
    bytes data = 1;
}

message ListRequest {}

message FileInfo {
    string filename = 1;
    string created_at = 2;
    string updated_at = 3;
}

message ListResponse {
    repeated FileInfo files = 1;
}

